@@ -19,6 +19,17 @@ Predictor::~Predictor()
 
 ////////////////////////////////////////////////////////////////////////////
 
+size_t
+Predictor::
+getMaxInteractionWidth( const size_t w, const size_t maxLoopSize )
+{
+	// check if no window at all
+	if (w==0)
+		return 0;
+	// compute maximal interaction width, ie each position pairs with max loop size
+	return 1 + ((w-1)*(maxLoopSize+1));
+}
+
 ////////////////////////////////////////////////////////////////////////////
 
 ////////////////////////////////////////////////////////////////////////////
